tdf#139631 sw_redlinehide: fix IntelligentCut feature with redlines

Unfortunately forgot to adapt SwCursorShell::GetChar() to use the
SwTextFrame instead of the SwTextNode, so it returns non-visible
(deleted) characters to SwWrtShell::IntelligentCut(), breaking one of
our oldest AI features.

(regression from sw_redlinehide)

Change-Id: I0c19944159e7e3af323bfe626c0e496ad745ef35
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162253
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit ab2b0bd10481e9d0bb5bfea09ab0b034bb246c52)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162271
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>